# langs

./: README.md
cpp/: CMakeCache.txt  CMakeLists.txt  README.md
cpp/01cpp/: 01cpp.cpp  CMakeLists.txt  a.out  main.cpp  test.c
cpp/02cpp/: CMakeLists.txt  String.cpp  String.h  main.cpp
cpp/03cpp/: CMakeLists.txt  main01.cpp  main02.cpp  main03.cpp
cpp/04cpp/: CMakeLists.txt  main01.cpp
cpp/05cpp/: CMakeLists.txt  DynFactory.h  Shape.cpp  Shape.h  main01.cpp
cpp/06cpp/: CMakeLists.txt  main01.cpp  main02.cpp
cpp/07cpp/: CMakeLists.txt  main.cpp  main01.cpp  main02.cpp  test.txt
cpp/08cpp/: CMakeLists.txt  main01.cpp  main02.cpp
cpp/09cpp/: CMakeLists.txt  main01.cpp
cpp/10cpp/: CMakeLists.txt  main01.cpp  main02.cpp  main03.cpp  main04.cpp
cpp/11cpp/: .DynBase.h.swp  CMakeLists.txt  DynBase.h  main01.cpp  main02.cpp  singleton.h  singleton2.h  singleton3.h
cpp/12cpp/: CMakeLists.txt  main01.cpp  mysqlcppconn.lib
cpp/13cpp/: CMakeLists.txt  main01.cpp
cpp/14cpp/: CMakeLists.txt  main01.cpp
cpp/15cpp/: 15cpp.rc  main01.cpp  main02.cpp  resource.h  test.cpp
go/code/: README.md
go/examples/: README.md  a.out  array.go  closure.go  constant.go  erros.go  for.go  functions.go  hello_world  hello_world.go  ifelse.go  interfaces.go  maps.go  methods.go  pointer.go  range.go  recursion.go  slices.go  structs.go  switch.go  variables.go  variadic_functions.go
js/jQuery/: hello_world.html
lua/coroutine/: .e3.lua.swp  e1.lua  e2.lua  e3.lua
lua/exercise/: a.out  account.lua  array.c  array_test.lua  array_v2.c  array_v2.lua  aux.lua  config.conf  (+8 more)
