cmake_minimum_required(VERSION 3.0)

project(CppStudy)

ADD_SUBDIRECTORY(01cpp)
ADD_SUBDIRECTORY(02cpp)
ADD_SUBDIRECTORY(03cpp)
ADD_SUBDIRECTORY(04cpp)
ADD_SUBDIRECTORY(05cpp)
ADD_SUBDIRECTORY(06cpp)
ADD_SUBDIRECTORY(07cpp)
ADD_SUBDIRECTORY(08cpp)
ADD_SUBDIRECTORY(09cpp)
ADD_SUBDIRECTORY(10cpp)
ADD_SUBDIRECTORY(11cpp)
ADD_SUBDIRECTORY(12cpp)
ADD_SUBDIRECTORY(13cpp)
